RESOLVED FIXED51754
WebKit 2 does not build on 64bits with a recent GCC
https://bugs.webkit.org/show_bug.cgi?id=51754
Summary WebKit 2 does not build on 64bits with a recent GCC
Benjamin Poulain
Reported 2010-12-30 09:54:01 PST
Following http://trac.webkit.org/changeset/74690, WebKit 2 does not compile on 64 bits with a recent GCC. The problem comes from the use of the type "unsigned long long" in the encoders and decoders. This type can be different from uint64_t on 64 bits, in which case it does not have any specialization for encoding and decoding.
Attachments
Patch (3.43 KB, patch)
2010-12-30 10:09 PST, Benjamin Poulain
no flags
Sorry for the delay, quick update :) (3.71 KB, patch)
2011-01-02 09:28 PST, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2010-12-30 10:09:40 PST
Sam Weinig
Comment 2 2010-12-30 14:15:13 PST
Comment on attachment 77686 [details] Patch You should instead change the type in OriginAndDatabases.h to be uint64_t.
Benjamin Poulain
Comment 3 2010-12-30 14:31:38 PST
(In reply to comment #2) > (From update of attachment 77686 [details]) > You should instead change the type in OriginAndDatabases.h to be uint64_t. Ok, I'll do that tomorrow. I thought about changing the class to use uint64_t but the type is almost never used in WebKit so I assumed it not commonly used by the project.
Benjamin Poulain
Comment 4 2011-01-02 09:28:30 PST
Created attachment 77777 [details] Sorry for the delay, quick update :)
Benjamin Poulain
Comment 5 2011-01-02 09:57:19 PST
*** Bug 51781 has been marked as a duplicate of this bug. ***
Balazs Kelemen
Comment 6 2011-01-02 10:14:10 PST
I better like my patch (what a cocky person I am) because that allows using either int, long, long long, int32_t and int64_t and the appropriate unsigned types at the call sites so hopefully it eliminates the possibility of further build breakage. If you agree, please invert the duplicate marking :)
Benjamin Poulain
Comment 7 2011-01-02 11:28:19 PST
(In reply to comment #6) > I better like my patch (what a cocky person I am) because that allows using > either int, long, long long, int32_t and int64_t and the appropriate unsigned types > at the call sites so hopefully it eliminates the possibility of further build breakage. It already does support the types up to 64 bits. The problem is, "long long int" is not necessarily 64 bits, that is why gcc refuses passing this type to a "long int". stdint have been introduced to solve the problem that different compilers have different size of types. I would use that :)
WebKit Commit Bot
Comment 8 2011-01-02 17:30:04 PST
Comment on attachment 77777 [details] Sorry for the delay, quick update :) Clearing flags on attachment: 77777 Committed r74882: <http://trac.webkit.org/changeset/74882>
WebKit Commit Bot
Comment 9 2011-01-02 17:30:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.