2011-01-02  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Csaba Osztrogonác.

        WebKit 2 does not build on 64bits with a recent GCC
        https://bugs.webkit.org/show_bug.cgi?id=51754

        Use explicitely 64 bits types for the attributes of DatabaseDetails.

        * storage/DatabaseDetails.h:
        (WebCore::DatabaseDetails::expectedUsage):
        (WebCore::DatabaseDetails::currentUsage):
2011-01-02  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Csaba Osztrogonác.

        WebKit 2 does not build on 64bits with a recent GCC
        https://bugs.webkit.org/show_bug.cgi?id=51754

        Change the argument coding for DatabaseDetails to use explicitely the 64 bits type.

        * Shared/OriginAndDatabases.h:
        * Shared/WebCoreArgumentCoders.h:

Canonical link: https://commits.webkit.org/65221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74882 268f45cc-cd09-0410-ab3c-d52691b4dbfc